--- a/style.css
+++ b/style.css
@@ -1,132 +1,216 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
-
-*,
-*::before,
-*::after
- {
+*{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
 }
 
-body {
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #333;
-  background-color: #f5f5f5;
-}
-
-header {
+header{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  height: 25vh;
+  background-color: #0D0D0D;
+
 }
 
-header h1 {
-  font-weight: 300;
-  margin-left: 10px;
+header img{
+  width: 126px;
+  height: 50px;
 }
 
-.container {
-  max-width: 500px;
-  margin: 30px auto;
-  padding: 20px;
-}
-
-/* Form & Input */
-.form-input {
+main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #262626;
+  position: relative;
+  padding-top: 50px;
+  gap: 10px;
   width: 100%;
-  font-size: 18px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  outline: none;
+
 }
 
-.form-input-filter {
-  margin-top: 20px;
-  width: 100%;
-  font-size: 18px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  background: transparent;
-  outline: none;
+#input{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  /* align-items: center; */
+
+  position: absolute;
+  top: 0;
+  transform: translateY(-50%);
 }
 
-/* Buttons */
-.btn {
-  background-color: #333;
-  color: #fff;
-  border: none;
+#input input{
+  background-color: #0D0D0D;
+  border: rgb(255, 200, 60) 1px solid;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 8px;
+  width: 450px;
+  outline: none;
+  font-size: 20px;
+  color: white;
+}
+
+
+
+#input button{
+  background-color: #0D0D0D;
+  border: rgb(255, 200, 60) 1px solid;
+  color: white;
+  padding: 0 10px;
+  font-size: 20px;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+
+#input button i{
+  font-size: 16px;
+}
+
+button{
   cursor: pointer;
 }
 
-.btn:hover {
-  background-color: #444;
+.meta{
+  max-width: 700px;
+  width: 100%;
+  border-bottom: 1px solid rgb(202, 190, 190);
+  
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
 }
 
-.btn-link {
-  font-size: 16px;
+button.add-todo{
+  background-color: #0D0D0D;
+  border: rgb(255, 200, 60) 1px solid;
+  color: white;
+  padding: 5px 10px;
+  font-size: 20px;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+
+button.add-todo i{
+  font-weight: 300;
+}
+
+.meta .left{
+  color: #4EA8DE;
+  ;
+}
+
+.meta .right{
+  color: rgb(174, 146, 211);
+  ;
+}
+
+
+#todo-data{
+  max-height: 0;
+  transition: max-height 0.5s linear,opacity 0.5s linear,padding 0.5s linear;
+  opacity: 0;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  color: #4EA8DE;
+  font-size: 20px;
+
+}
+
+.radio-heading{
+  align-self: flex-start;
+  color: bisque;
+}
+
+#todo-data.show{
+  max-height: 1000px;
+ display: flex;
+
+ padding: 10px; 
+ /* border: 1px solid rgb(255, 200, 60);  */
+  /*  */
+  width: 100%;
+  opacity: 1;
+  transition: max-height 0.5s linear, opacity 0.5s linear, padding 0.5s linear;
+}
+
+#todo-data textarea, #todo-data input[type="date"]{
   background-color: transparent;
-  color: #333;
-  border: none;
-  padding: 0;
+  border: 1px solid rgb(255, 200, 60); 
+  border-radius: 5px;
+  padding: 10px; 
+  font-size: 20px;
+  outline: none;
+  overflow: auto;
+  color: #4EA8DE;
+  margin: 10px 0px;
+  
+  width: 100%;
   
 }
 
-i{
-  cursor: pointer;
-}
-
-
-.btn-clear {
-  margin-top: 20px;
+ #items{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
   width: 100%;
-  font-size: 16px;
-  background-color: transparent;
-  color: #333;
-  border: 1px solid #ccc;
+
+}
+
+#todo-data input[type="date"]{
+ width: auto;
+}
+
+#todo-data #radios, #todo-data #status{
+  align-self: stretch;
+  display: flex;
+  justify-content: space-around;
+}
+
+.task{
+  width: 100%;
+  max-width: 700px;
+  border: 1px solid rgb(255, 200, 60); 
+  padding: 10px;
   border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
+  color: #4EA8DE;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 10px;
+
 }
 
-.btn-clear:hover {
-  background-color: #f1f1f1;
-}
-
-.text-red {
+.task .deadline{
   color: red;
 }
 
-/* Items */
-
-.items {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
+.task .priority{
+  color: orange;
 }
 
-.items li {
+.task .first{
   display: flex;
   justify-content: space-between;
-  width: 45%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px 15px;
-  margin: 0 5px 20px;
-  font-weight: 700;
+  flex-wrap: wrap;
+  
 }
 
-@media (max-width: 500px) {
-  .items li {
-    width: 100%;
-  }
+.task .first button{
+  background-color: transparent;
+  color: white;
+  border: none;
+  margin: 0px 10px;
+  outline: none;
+  font-size: 20px;
 }
